# ORACLE-v2.0

./: .env.example  .gitignore  LICENSE  Makefile  README.md  cleanup_tmp.sh  pyproject.toml  requirements-bio.txt  requirements-dev.txt  requirements.txt
configs/: base_config.yaml  cam_config.yaml  rsp_config.yaml  tcd_config.yaml
configs/inference/: full_pipeline.yaml
configs/training/: cam_train.yaml  rsp_train.yaml  tcd_train.yaml
data/splits/: test.json  train.json  val.json
notebooks/: 01_data_exploration.ipynb  02_grn_inference.ipynb  03_attractor_landscape.ipynb  04_perturbation_analysis.ipynb  05_tcip_design.ipynb  06_benchmark_results.ipynb
oracle/: __init__.py  interfaces.py  version.py
oracle/cam/: __init__.py  attractor_classifier.py  attractor_finder.py  boolean_network.py  cam_pipeline.py  continuous_ode.py  grn_inference.py  landscape_computer.py  preprocessing.py  pseudotime.py
oracle/data/: __init__.py  collators.py  datasets.py  loaders.py  samplers.py  transforms.py
oracle/evaluation/: __init__.py  (+5 more)
results/: t_cell_oracle_report.json
scripts/: build_benchmarks.py  build_biological_pretrain_dataset.py  build_pretrain_dataset.py  build_tf_splits.py  download_zinc22.py  evaluate.py  fetch_data.py  plot_gbm_attractor.py  plot_gbm_landscape_3d.py  preprocess_all.py  run_aml_pipeline.py  run_atc_pipeline.py  run_continue_build.py  run_gbm_pipeline.py  run_inference.py  run_luad_pipeline.py  run_stage0_only.py  run_stage1a_census.py  train_all.py  train_cam.py  train_cancer_score.py  train_rsp.py  train_tcd.py
tests/: conftest.py
(+102 files in other folders)
