[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "oracle-cancer-reversion"
version = "0.1.0"
description = "Oncogenic Reversion via Attractor-guided Computational Landscape Engineering"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
oracle-run = "scripts.run_inference:main"
oracle-train = "scripts.train_all:main"
oracle-fetch = "scripts.fetch_data:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
